--- a/plugin/src/test/resources/rest-api-spec/test/ml/get_model_snapshots.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/get_model_snapshots.yaml
@@ -1,7 +1,7 @@
 setup:
   - do:
       xpack.ml.put_job:
-        job_id: foo
+        job_id: get-model-snapshots
         body:  >
           {
             "analysis_config" : {
@@ -15,27 +15,27 @@ setup:
 
   - do:
       index:
-        index:  .ml-anomalies-foo
+        index:  .ml-anomalies-get-model-snapshots
         type:   model_snapshot
-        id:     "foo-1"
-        body:   { "job_id": "foo", "snapshot_id": "1", "timestamp": "2016-06-02T00:00:00Z" }
+        id:     "get-model-snapshots-1"
+        body:   { "job_id": "get-model-snapshots", "snapshot_id": "1", "timestamp": "2016-06-02T00:00:00Z" }
 
   - do:
       index:
-        index:  .ml-anomalies-foo
+        index:  .ml-anomalies-get-model-snapshots
         type:   model_snapshot
-        id:     "foo-2"
-        body:   { "job_id": "foo", "snapshot_id": "2", "timestamp": "2016-06-01T00:00:00Z" }
+        id:     "get-model-snapshots-2"
+        body:   { "job_id": "get-model-snapshots", "snapshot_id": "2", "timestamp": "2016-06-01T00:00:00Z" }
 
   - do:
       indices.refresh:
-        index: .ml-anomalies-foo
+        index: .ml-anomalies-get-model-snapshots
 
 ---
 "Test get model snapshots API with no params":
   - do:
       xpack.ml.get_model_snapshots:
-        job_id: "foo"
+        job_id: "get-model-snapshots"
 
   - match: { count: 2 }
   - match: { model_snapshots.0.timestamp: 1464825600000 }
@@ -45,7 +45,7 @@ setup:
 "Test get model snapshots API with _all":
   - do:
       xpack.ml.get_model_snapshots:
-        job_id: "foo"
+        job_id: "get-model-snapshots"
         snapshot_id: "_all"
 
   - match: { count: 2 }
@@ -56,7 +56,7 @@ setup:
 "Test get specific model snapshot":
   - do:
       xpack.ml.get_model_snapshots:
-        job_id: "foo"
+        job_id: "get-model-snapshots"
         snapshot_id: "2"
 
   - match: { count: 1 }
@@ -66,7 +66,7 @@ setup:
 "Test get model snapshots API with start/end":
   - do:
       xpack.ml.get_model_snapshots:
-        job_id: "foo"
+        job_id: "get-model-snapshots"
         start: "2016-05-01T00:00:00Z"
         end: "2016-07-01T00:00:00Z"
 
@@ -78,7 +78,7 @@ setup:
 "Test get model snapshots API with ascending":
   - do:
       xpack.ml.get_model_snapshots:
-        job_id: "foo"
+        job_id: "get-model-snapshots"
         desc: false
 
   - match: { count: 2 }
@@ -89,7 +89,7 @@ setup:
 "Test get model snapshots API with size":
   - do:
       xpack.ml.get_model_snapshots:
-        job_id: "foo"
+        job_id: "get-model-snapshots"
         size: 1
 
   - match: { count: 2 }
@@ -100,7 +100,7 @@ setup:
 "Test get model snapshots API with from":
   - do:
       xpack.ml.get_model_snapshots:
-        job_id: "foo"
+        job_id: "get-model-snapshots"
         from: 1
 
   - match: { count: 2 }
