--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get.yaml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get.yaml
@@ -1,10 +1,10 @@
 setup:
   - do:
       xpack.ml.put_job:
-        job_id: job-1
+        job_id: jobs-get-1
         body:  >
           {
-            "job_id":"job-1",
+            "job_id":"jobs-get-1",
             "description":"Job 1",
             "analysis_config" : {
                 "bucket_span": "300s",
@@ -19,10 +19,10 @@ setup:
 
   - do:
       xpack.ml.put_job:
-        job_id: job-2
+        job_id: jobs-get-2
         body:  >
           {
-            "job_id":"job-2",
+            "job_id":"jobs-get-2",
             "description":"Job 2",
             "analysis_config" : {
                 "bucket_span": "600s",
@@ -48,14 +48,14 @@ setup:
 
   - do:
       xpack.ml.get_jobs:
-        job_id: job-1
-  - match: { jobs.0.job_id: "job-1"}
+        job_id: jobs-get-1
+  - match: { jobs.0.job_id: "jobs-get-1"}
   - match: { jobs.0.description: "Job 1"}
 
   - do:
       xpack.ml.get_jobs:
-        job_id: job-2
-  - match: { jobs.0.job_id: "job-2"}
+        job_id: jobs-get-2
+  - match: { jobs.0.job_id: "jobs-get-2"}
   - match: { jobs.0.description: "Job 2"}
 
 ---
@@ -65,9 +65,9 @@ setup:
       xpack.ml.get_jobs:
         job_id: _all
   - match: { count: 2 }
-  - match: { jobs.0.job_id: "job-1"}
+  - match: { jobs.0.job_id: "jobs-get-1"}
   - match: { jobs.0.description: "Job 1"}
-  - match: { jobs.1.job_id: "job-2"}
+  - match: { jobs.1.job_id: "jobs-get-2"}
   - match: { jobs.1.description: "Job 2"}
 
 ---
@@ -76,7 +76,7 @@ setup:
   - do:
       xpack.ml.get_jobs: {}
   - match: { count: 2 }
-  - match: { jobs.0.job_id: "job-1"}
+  - match: { jobs.0.job_id: "jobs-get-1"}
   - match: { jobs.0.description: "Job 1"}
-  - match: { jobs.1.job_id: "job-2"}
+  - match: { jobs.1.job_id: "jobs-get-2"}
   - match: { jobs.1.description: "Job 2"}
