--- a/qa/smoke-test-watcher-with-mustache/src/test/resources/rest-api-spec/test/watcher_mustache/25_array_compare.yaml
+++ b/qa/smoke-test-watcher-with-mustache/src/test/resources/rest-api-spec/test/watcher_mustache/25_array_compare.yaml
@@ -6,61 +6,6 @@
           wait_for_status: yellow
 
   - do:
-      xpack.watcher.stats: {}
-  - match: { "stats.0.watcher_state": "started" }
-  - match: { "stats.0.watch_count": 0 }
-
-  - do:
-      xpack.watcher.put_watch:
-        id: "array-compare-watch"
-        body:  >
-          {
-            "trigger": {
-              "schedule": {
-                "interval": "5m"
-              }
-            },
-            "input": {
-              "search": {
-                "request": {
-                  "indices": [ "test_1" ],
-                  "body": {
-                    "aggs": {
-                      "top_levels": {
-                        "terms": {
-                          "field": "level",
-                          "size": 1
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            },
-            "condition": {
-              "array_compare": {
-                "ctx.payload.aggregations.top_levels.buckets": {
-                  "path": "doc_count",
-                  "gte": {
-                    "value": 3,
-                    "quantifier": "some"
-                  }
-                }
-              }
-            },
-            "actions": {
-              "log": {
-                "logging": {
-                  "text": "executed at {{ctx.execution_time}}"
-                }
-              }
-            }
-          }
-
-  - match: { _id: "array-compare-watch" }
-  - match: { created: true }
-
-  - do:
       index:
           index:  test_1
           type:   test
@@ -91,12 +36,53 @@
       indices.refresh: {}
 
   - do:
-      xpack.watcher.stats: {}
-  - match: { "stats.0.watch_count": 1 }
-
-  - do:
       xpack.watcher.execute_watch:
-        id: "array-compare-watch"
+        body:  >
+          {
+            "watch" : {
+              "trigger": {
+                "schedule": {
+                  "interval": "5m"
+                }
+              },
+              "input": {
+                "search": {
+                  "request": {
+                    "indices": [ "test_1" ],
+                    "body": {
+                      "aggs": {
+                        "top_levels": {
+                          "terms": {
+                            "field": "level",
+                            "size": 1
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "condition": {
+                "array_compare": {
+                  "ctx.payload.aggregations.top_levels.buckets": {
+                    "path": "doc_count",
+                    "gte": {
+                      "value": 3,
+                      "quantifier": "some"
+                    }
+                  }
+                }
+              },
+              "actions": {
+                "log": {
+                  "logging": {
+                    "text": "executed at {{ctx.execution_time}}"
+                  }
+                }
+              }
+            }
+          }
+
 
   - match: { "watch_record.result.input.status": "success" }
   - match: { "watch_record.result.input.payload.hits.total": 4 }
